# OpenStackClient_CES

./: .coveragerc  .nosetests  .testr.conf  README.html  README.md  README.rst  commands.rst  setup.cfg  task.md
cloudeyeclient/common/: display.py  httpclient.py  i18n.py  manager.py  parser_builder.py  parsetypes.py  resource.py  utils.py
cloudeyeclient/osc/: plugin.py
cloudeyeclient/osc/v1/: alarm.py  metric.py  parser_builder.py  quota.py
cloudeyeclient/tests/: base.py  fakes.py
cloudeyeclient/tests/cloudeye/: test_metric_mgr.py
cloudeyeclient/tests/common/: test_display.py  test_exceptions.py  test_httpclient.py  test_manager.py  test_resource.py  test_utils.py
cloudeyeclient/tests/osc/: test_plugin.py
cloudeyeclient/tests/osc/v1/: test_alarm.py  test_metric.py  test_quota.py
cloudeyeclient/v1/: alarm_mgr.py  client.py  metric_mgr.py  quota_mgr.py  resource.py
tools/: hacking.sh
