[metadata]
name = python-cloudeyeclient
summary = Client Library for Managing HuaWei Cloud Eye Service
description-file = README.rst
author = QianBiao Ng
author-email = xmufive@gmail.com
home-page = http://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developer
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages = cloudeyeclient

[entry_points]

openstack.cli.extension =
    cloudeye = cloudeyeclient.osc.plugin

openstack.cloudeye.v1 =
    metric_list = cloudeyeclient.osc.v1.metric:ListMetric


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
